# libopenmpt_kmp

./: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.clinerules/: projectwide_rules.md
.github/workflows/: publish.yml  rebuild-natives.yml
app/: build.gradle.kts
app/src/androidMain/: AndroidManifest.xml
app/src/androidMain/kotlin/com/beyondeye/openmptdemo/: MainActivity.kt  OpenMPTDemoApp.kt
app/src/androidMain/res/values/: strings.xml
app/src/androidTest/java/com/beyondeye/openmptdemo/: ExampleInstrumentedTest.kt
app/src/commonMain/composeResources/files/: sm64_mainmenuss.xm
app/src/commonMain/kotlin/com/beyondeye/openmptdemo/: App.kt  ModPlayerViewModel.kt
app/src/commonMain/kotlin/com/beyondeye/openmptdemo/di/: AppModule.kt
app/src/commonMain/kotlin/com/beyondeye/openmptdemo/timeutils/: timeUtils.kt
app/src/commonMain/kotlin/com/beyondeye/openmptdemo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/commonMain/kotlin/com/beyondeye/openmptdemo/uicomponents/: CollapsibleSection.kt  MetadataDisplay.kt  ModuleFileLoader.kt  PlaybackControls.kt  PlaybackSettings.kt  SpeedPitchControls.kt
app/src/desktopMain/kotlin/com/beyondeye/openmptdemo/: main.kt
app/src/iosMain/kotlin/com/beyondeye/openmptdemo/: MainViewController.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ModPlayerEngine.cpp  ModPlayerEngine.h  mod_player_jni.cpp
app/src/main/java/com/beyondeye/openmptdemo/: MainActivity.kt  ModPlayerViewModel.kt
app/src/main/java/com/beyondeye/openmptdemo/player/: AndroidModPlayer.kt  ModMetadata.kt  ModPlayer.kt  ModPlayerException.kt  ModPlayerNative.kt  PlaybackState.kt
app/src/main/java/com/beyondeye/openmptdemo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: themes.xml
app/src/test/java/com/beyondeye/openmptdemo/: ExampleUnitTest.kt
app/src/wasmJsMain/kotlin/com/beyondeye/openmptdemo/: main.kt
app/src/wasmJsMain/resources/: index.html  libopenmpt.js  libopenmpt.wasm
docs/: README_building.md  README_desktop_implementation.md  README_iOS_implementation.md  README_iosApp.md  README_library_consumers.md  README_macos_build.md  README_publishing.md  README_recompiling_libopenmpt.md  README_recompiling_libopenmpt_wasm.md  README_wasmjs_integration.md  source_lnks.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/iosApp/: ContentView.swift  Info.plist  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
libopenmpt/: build.gradle.kts
libopenmpt/src/main/cpp/: Android.mk  Application.mk  CMakeLists-ios.txt
libopenmpt/src/main/cpp/ios/: CMakeLists.txt
libopenmpt/src/main/cpp/macos/: CMakeLists.txt
shared/: build.gradle.kts
shared/src/androidMain/cpp/: CMakeLists.txt  ModPlayerEngine.cpp  mod_player_jni.cpp
shared/src/androidMain/kotlin/com/beyondeye/openmpt/core/: AndroidModPlayer.kt  ModPlayerFactory.android.kt  ModPlayerNative.kt
shared/src/commonMain/kotlin/com/beyondeye/openmpt/core/: ModMetadata.kt  ModPlayer.kt  ModPlayerException.kt  ModPlayerFactory.kt  PlaybackState.kt
shared/src/desktopMain/cpp/: CMakeLists.txt  build_native.sh  desktop_mod_player_jni.cpp
shared/src/desktopMain/kotlin/com/beyondeye/openmpt/core/: DesktopModPlayer.kt  DesktopModPlayerNative.kt  ModPlayerFactory.desktop.kt  NativeLibraryLoader.kt
shared/src/desktopMain/resources/native/macos-arm64/: libmodplayer_desktop.dylib  libopenmpt.dylib
shared/src/iosMain/kotlin/com/beyondeye/openmpt/core/: IosAudioEngine.kt  IosModPlayer.kt  ModPlayerFactory.ios.kt
shared/src/iosMain/libs/libopenmpt.xcframework/: Info.plist
shared/src/nativeInterop/cinterop/: libopenmpt.def
shared/src/wasmJsMain/kotlin/com/beyondeye/openmpt/core/: LibOpenMpt.kt  ModPlayerFactory.wasmJs.kt  WasmModPlayer.kt  WebAudioPlayer.kt
shared/src/wasmJsMain/resources/: libopenmpt.wasm
